--- a/index.html
+++ b/index.html
@@ -1794,7 +1794,7 @@
                 <li>Reserved supply is held for Pitbit holders.</li>
               </ul>
               <p style="margin-top: 8px;">
-                Contract and explorer links will appear here once deployment is live.
+                <strong>Contract:</strong> <a href="https://monadscan.com/address/0xbD11e8799E1D48fe607B6a471C66de84522e49c1" target="_blank" rel="noopener noreferrer" style="color: #4df2c2; text-decoration: none;">0xbD11e8799E1D48fe607B6a471C66de84522e49c1</a>
               </p>
             </aside>
           </div>
