--- a/index.html
+++ b/index.html
@@ -2776,9 +2776,9 @@
               <div class="timeline-item">
                 <div class="timeline-dot"></div>
                 <div class="timeline-label">Phase three</div>
-                <div class="timeline-title">Reveal & Community Growth</div>
+                <div class="timeline-title">Reveal & Airdrop</div>
                 <div class="timeline-body">
-                  Full trait reveal of all Nomad Dogs with rarity rankings and trait analytics.
+                  Full trait reveal of all Nomad Dogs with rarity rankings and trait analytics. Airdrop for Pitbits holders.
                 </div>
               </div>
               <div class="timeline-item">
