Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
     content="Nomads on Monad – 4444 explorers, advanced trait systems and on-chain adventures."
   />
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://nomadsonmonad.com/" />
+  <meta property="og:title" content="Nomads on Monad - 4444 Explorers" />
+  <meta property="og:description" content="Join 4444 explorers with advanced trait systems and on-chain adventures. Play Nomad Brawlers arena game and Nomad Rise price prediction climber." />
+  <meta property="og:image" content="https://nomadsonmonad.com/assets/nomadsemblem.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="Nomads on Monad" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://nomadsonmonad.com/" />
+  <meta name="twitter:title" content="Nomads on Monad - 4444 Explorers" />
+  <meta name="twitter:description" content="Join 4444 explorers with advanced trait systems and on-chain adventures. Play Nomad Brawlers arena game and Nomad Rise price prediction climber." />
+  <meta name="twitter:image" content="https://nomadsonmonad.com/assets/nomadsemblem.png" />
+  <meta name="twitter:creator" content="@NomadsOnMonad" />
+  <meta name="twitter:site" content="@NomadsOnMonad" />
+
+  <!-- Additional Meta Tags -->
+  <meta name="theme-color" content="#4df2c2" />
+  <meta name="keywords" content="Nomads, Monad, NFT, Web3, Blockchain, Gaming, Nomad Brawlers, Nomad Rise, Crypto, Price Prediction" />
+  <meta name="author" content="Nomads on Monad" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://nomadsonmonad.com/" />
+
   <!-- Favicons and Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/nomadsemblem.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/nomadsemblem.png">
