--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:url" content="https://nomadsonmonad.com/" />
   <meta property="og:title" content="Nomads on Monad - 4444 Explorers" />
   <meta property="og:description" content="Join 4444 explorers with advanced trait systems and on-chain adventures. Play Nomad Brawlers arena game and Nomad Rise price prediction climber." />
-  <meta property="og:image" href="./assets/metaemblem.png" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/NifftySwiggle/Nomads/main/assets/metaemblem.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="Nomads on Monad" />
@@ -25,7 +25,7 @@
   <meta name="twitter:url" content="https://nomadsonmonad.com/" />
   <meta name="twitter:title" content="Nomads on Monad - 4444 Explorers" />
   <meta name="twitter:description" content="Join 4444 explorers with advanced trait systems and on-chain adventures. Play Nomad Brawlers arena game and Nomad Rise price prediction climber." />
-  <meta name="twitter:image" href="./assets/metaemblem.png" />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/NifftySwiggle/Nomads/main/assets/metaemblem.png" />
   <meta name="twitter:creator" content="@NomadsOnMonad" />
   <meta name="twitter:site" content="@NomadsOnMonad" />
 
