Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -2338,6 +2338,13 @@
           <p class="realm-subtitle">Where the original explorers continue their journey on Cronos</p>
         </div>
 
+        <div class="airdrop-update" style="background:#222;padding:1em;margin:1em 0;border-radius:8px;color:#fff;">
+          <h2>Airdrop Update</h2>
+          <p>We have airdropped <strong>214 Nomads</strong> to Pitbit holders!</p>
+          <p>When Pitbits are minted in the future, Nomads will be manually sent to the new holders.</p>
+          <p><strong>Reserved Nomads for Pitbits:</strong> 785 remaining</p>
+        </div>
+
         <div style="display: grid; gap: 24px;">
           <div class="card" style="border: 2px solid rgba(77, 242, 194, 0.3);">
             <div class="card-label" style="color: #4df2c2;">Collection Info</div>
@@ -2380,6 +2387,7 @@
                 <li><strong>1:1 Allocation:</strong> Get 1 Nomad Dog for every 1 Pitbit you hold</li>
                 <li><strong>Reserved Supply:</strong> Exclusive allocation guaranteed for Pitbit holders</li>
                 <li><strong>OG Status:</strong> Recognition as original believers</li>
+                <li><strong>Airdrop Status:</strong> 214 Nomads airdropped. 785 reserved for future Pitbits mints (manual distribution).</li>
                 <li><strong>Community Access:</strong> Special roles and benefits</li>
                 <li><strong>Multi-Chain Presence:</strong> Assets on both Cronos & Monad</li>
               </ul>
@@ -2426,7 +2434,7 @@
                 </div>
                 <div class="hero-kpi">
                   <div class="hero-kpi-label">Reserved</div>
-                  <div class="hero-kpi-value">999</div>
+                  <div class="hero-kpi-value">785</div>
                 </div>
               </div>
 
@@ -2572,7 +2580,7 @@
                 <ul class="card-list">
                   <li><strong>Supply:</strong> 4444 total Nomads.</li>
                   <li><strong>Mint:</strong> 45&nbsp;$MON per Nomad (+ 15 $MON protocol fee) <span id="about-usd-price" style="color: var(--text-muted);"></span></li>
-                  <li><strong>Reserved:</strong> 999 for collabs, airdrops, and ecosystem alignment.</li>
+                  <li><strong>Reserved:</strong> 999 for Pitbit airdrops.</li>
                   <li><strong>Max per wallet:</strong> 100 (Subject to change).</li>
                   <li><strong>Chain:</strong> Monad mainnet.</li>
                 </ul>
